--- a/index.html
+++ b/index.html
@@ -2,43 +2,31 @@
 <html lang="es">
 <head>
 	<title>Tarea 1</title>
+	<meta charset="utf-8">
+	<style type="text/css">
+		form{
+			font: -size:14px;
+			font: family:sans-serif;
+		}
+		input{
+			display: block;
+			width: 100%;
+			padding:5px; 
+			margin:25px;
+			height:50px;
+		}
+		input[type="submit"]{
+			width: 25%;
+		}
+	</style>
 </head>
 <body>
-	<img src="img/html5.png">
-	<h1>Encabezado de pagina<h1/>
-	<hr>
-	<h2>Encabezaado de parrafo</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
-	<!--Separacion entre parrafos-->
-	<h2>Encabezaado de parrafo</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
-	<!--Separacion entre parrafos-->
-	<h2>Encabezaado de parrafo</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+	<h1>Formulario</h1>
+	<form method="post">
+		<label>Nombre</label>
+		<input type="text" name="nombre" required placeholder="Complete su nombre y apellido">
+		<input type="submit" value="Guardar">
+	</form>
 
-	<br>
-
-	<b>Texto en negrita</b>
-	<br>
-	<i>Texto en cursiva</i>
-	<br>
-	<b><i>Texto en negrita y cursiva</i></b>
-	<br>
-	<href="">www.google.com</a>
 </body>
 </html>
